feat: category in api
