# internal/api/v1/oas_json_gen.go
@@ -498,6 +498,41 @@ func (s *OptDateTime) UnmarshalJSON(data []byte) error {
 	return s.Decode(d, json.DecodeDateTime)
 }
 
+// Encode encodes string as json.
+func (o OptString) Encode(e *jx.Encoder) {
+	if !o.Set {
+		return
+	}
+	e.Str(string(o.Value))
+}
+
+// Decode decodes string from json.
+func (o *OptString) Decode(d *jx.Decoder) error {
+	if o == nil {
+		return errors.New("invalid: unable to decode OptString to nil")
+	}
+	o.Set = true
+	v, err := d.Str()
+	if err != nil {
+		return err
+	}
+	o.Value = string(v)
+	return nil
+}
+
+// MarshalJSON implements stdjson.Marshaler.
+func (s OptString) MarshalJSON() ([]byte, error) {
+	e := jx.Encoder{}
+	s.Encode(&e)
+	return e.Bytes(), nil
+}
+
+// UnmarshalJSON implements stdjson.Unmarshaler.
+func (s *OptString) UnmarshalJSON(data []byte) error {
+	d := jx.DecodeBytes(data)
+	return s.Decode(d)
+}
+
 // Encode encodes SaveUserQueryBadRequest as json.
 func (s *SaveUserQueryBadRequest) Encode(e *jx.Encoder) {
 	unwrapped := (*Error)(s)
@@ -944,6 +979,12 @@ func (s *SearchTokenInfoRequest) encodeFields(e *jx.Encoder) {
 		e.Str(s.Token)
 	}
 	{
+		if s.Category.Set {
+			e.FieldStart("category")
+			s.Category.Encode(e)
+		}
+	}
+	{
 		e.FieldStart("start")
 		json.EncodeDateTime(e, s.Start)
 	}
@@ -955,10 +996,11 @@ func (s *SearchTokenInfoRequest) encodeFields(e *jx.Encoder) {
 	}
 }
 
-var jsonFieldsNameOfSearchTokenInfoRequest = [3]string{
+var jsonFieldsNameOfSearchTokenInfoRequest = [4]string{
 	0: "token",
-	1: "start",
-	2: "end",
+	1: "category",
+	2: "start",
+	3: "end",
 }
 
 // Decode decodes SearchTokenInfoRequest from json.
@@ -982,8 +1024,18 @@ func (s *SearchTokenInfoRequest) Decode(d *jx.Decoder) error {
 			}(); err != nil {
 				return errors.Wrap(err, "decode field \"token\"")
 			}
+		case "category":
+			if err := func() error {
+				s.Category.Reset()
+				if err := s.Category.Decode(d); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"category\"")
+			}
 		case "start":
-			requiredBitSet[0] |= 1 << 1
+			requiredBitSet[0] |= 1 << 2
 			if err := func() error {
 				v, err := json.DecodeDateTime(d)
 				s.Start = v
@@ -1014,7 +1066,7 @@ func (s *SearchTokenInfoRequest) Decode(d *jx.Decoder) error {
 	// Validate required fields.
 	var failures []validate.FieldError
 	for i, mask := range [1]uint8{
-		0b00000011,
+		0b00000101,
 	} {
 		if result := (requiredBitSet[i] & mask) ^ mask; result != 0 {
 			// Mask only required fields and check equality to mask using XOR.
@@ -1112,6 +1164,10 @@ func (s *TokenInfo) encodeFields(e *jx.Encoder) {
 		e.Str(s.Token)
 	}
 	{
+		e.FieldStart("category")
+		e.Str(s.Category)
+	}
+	{
 		e.FieldStart("records")
 		e.ArrStart()
 		for _, elem := range s.Records {
@@ -1121,9 +1177,10 @@ func (s *TokenInfo) encodeFields(e *jx.Encoder) {
 	}
 }
 
-var jsonFieldsNameOfTokenInfo = [2]string{
+var jsonFieldsNameOfTokenInfo = [3]string{
 	0: "token",
-	1: "records",
+	1: "category",
+	2: "records",
 }
 
 // Decode decodes TokenInfo from json.
@@ -1147,8 +1204,20 @@ func (s *TokenInfo) Decode(d *jx.Decoder) error {
 			}(); err != nil {
 				return errors.Wrap(err, "decode field \"token\"")
 			}
-		case "records":
+		case "category":
 			requiredBitSet[0] |= 1 << 1
+			if err := func() error {
+				v, err := d.Str()
+				s.Category = string(v)
+				if err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"category\"")
+			}
+		case "records":
+			requiredBitSet[0] |= 1 << 2
 			if err := func() error {
 				s.Records = make([]TokenRecord, 0)
 				if err := d.Arr(func(d *jx.Decoder) error {
@@ -1175,7 +1244,7 @@ func (s *TokenInfo) Decode(d *jx.Decoder) error {
 	// Validate required fields.
 	var failures []validate.FieldError
 	for i, mask := range [1]uint8{
-		0b00000011,
+		0b00000111,
 	} {
 		if result := (requiredBitSet[i] & mask) ^ mask; result != 0 {
 			// Mask only required fields and check equality to mask using XOR.
@@ -1350,15 +1419,20 @@ func (s *TokenRecordFeatures) encodeFields(e *jx.Encoder) {
 		e.Float64(s.InterestNormalized)
 	}
 	{
+		e.FieldStart("interest_category")
+		e.Float64(s.InterestCategory)
+	}
+	{
 		e.FieldStart("sentiment")
 		e.Int16(s.Sentiment)
 	}
 }
 
-var jsonFieldsNameOfTokenRecordFeatures = [3]string{
+var jsonFieldsNameOfTokenRecordFeatures = [4]string{
 	0: "interest",
 	1: "interest_normalized",
-	2: "sentiment",
+	2: "interest_category",
+	3: "sentiment",
 }
 
 // Decode decodes TokenRecordFeatures from json.
@@ -1394,8 +1468,20 @@ func (s *TokenRecordFeatures) Decode(d *jx.Decoder) error {
 			}(); err != nil {
 				return errors.Wrap(err, "decode field \"interest_normalized\"")
 			}
-		case "sentiment":
+		case "interest_category":
 			requiredBitSet[0] |= 1 << 2
+			if err := func() error {
+				v, err := d.Float64()
+				s.InterestCategory = float64(v)
+				if err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"interest_category\"")
+			}
+		case "sentiment":
+			requiredBitSet[0] |= 1 << 3
 			if err := func() error {
 				v, err := d.Int16()
 				s.Sentiment = int16(v)
@@ -1416,7 +1502,7 @@ func (s *TokenRecordFeatures) Decode(d *jx.Decoder) error {
 	// Validate required fields.
 	var failures []validate.FieldError
 	for i, mask := range [1]uint8{
-		0b00000111,
+		0b00001111,
 	} {
 		if result := (requiredBitSet[i] & mask) ^ mask; result != 0 {
 			// Mask only required fields and check equality to mask using XOR.
